# atomic-swap

./: .gitignore  .gitmodules  .golangci.yml  .solhint.json  AUTHORS  Cargo.toml  Dockerfile  Makefile  README.md  codecov.yml  go.mod  go.sum  makefile  swap-contract  test-wallet.keys  testerconfig.json
.github/: CODEOWNERS
alice/: net.go  protocol.go  recovery.go  recovery_test.go  swap_state.go  swap_state_test.go
bob/: instance.go  net.go  offers.go  protocol.go  protocol_test.go  recovery.go  recovery_test.go  swap_state.go  swap_state_test.go
bootnode/: bootnode.go
cliutil/: log.go  signal_handler.go  signal_handler_test.go  utils.go  utils_test.go
cmd/: alice.go  bob.go  main.go  node.go  wait.go
coins/: coins.go  coins_test.go  common.go  common_test.go  errors.go  exchange_rate.go  exchange_rate_test.go  exponent.go  exponent_test.go  provides.go  provides_test.go  round.go  round_test.go  test_support.go  validate.go  validate_test.go
common/: coins.go  coins_test.go  config.go  config_test.go  consts.go  exchange_rate.go  get_prices.go  get_prices_test.go  interfaces.go  keys.go  network.go  network_test.go  provides.go  provides_test.go  test_support.go  utils.go  utils_test.go
crypto/: hash.go
daemon/: bad_make_take_values_test.go  cancel_or_refund_test.go  double_restart_test.go  issue385_test.go  manual_tx_test.go  net.key  refund_after_restart_test.go  swap_daemon.go  swap_daemon_erc20_test.go  swap_daemon_test.go  sweep_test.go  test_support.go
db/: database.go  database_test.go  recovery_db.go  recovery_db_test.go  types.go
(+583 files in other folders)
